--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 .DS_Store
 Thumbs.db
-.vscode
 .development
+.vscode/*
+!.vscode/arduino.json
+!.vscode/settings.json
+!.vscode/c_cpp_properties.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+!.vscode/*.code-workspace
